objects/Performance_Indicator_Notable_Trends__c.object
<CustomObject><fields>
        <fullName>Notable_Trend__c</fullName>
        <label>Notable Trend?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Notable_Trends_1__c</fullName>
        <label>Notable Trends 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Performance_Indicator__c</fullName>
        <label>Performance Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Achievement (Status)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postsecondary &amp; Workforce Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Graduation and Completion Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English Language Development and Attainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaggregated Achievement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Behavior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaggregated Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Priority_Performance_Challenge_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Performance Challenge 1</label>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Performance Indicator Notable Trends (Priority Performance Challenge 1)</relationshipLabel>
        <relationshipName>Performance_Indicator_Notable_Trends</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Root_Cause_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 1</label>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Performance Indicator Notable Trends (Root Cause 1)</relationshipLabel>
        <relationshipName>Performance_Indicator_Notable_TrendsHERJ</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Trend_Direction__c</fullName>
        <label>Trend Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Stable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decreasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increasing then decreasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decreasing then increasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable then increasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable then decreasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increasing then stable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decreasing then stable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Performance Indicator Notable Trends</relationshipLabel>
        <relationshipName>Performance_Indicator_Notable_Trends</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Performance Indicator Notable Trend</label><nameField>
        <displayFormat>PINNP-{0000}</displayFormat>
        <label>Performance Indicator Notable Trends Nam</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Performance Indicator Notable Trends</pluralLabel><sharingModel>ReadWrite</sharingModel><recordTypes>
        <fullName>Academic_Growth</fullName>
        <active>false</active>
        <label>Academic Growth</label>
    </recordTypes><recordTypes>
        <fullName>Academic_Growth_Gaps</fullName>
        <active>false</active>
        <label>Academic Growth Gaps</label>
    </recordTypes><recordTypes>
        <fullName>English_Language_Development_and_Attainment</fullName>
        <active>false</active>
        <description>English Language Development and Attainment for Distrcits</description>
        <label>English Language Development and Attainment</label>
    </recordTypes><recordTypes>
        <fullName>Notbale_Trends</fullName>
        <active>true</active>
        <label>Notable Trends</label>
    </recordTypes><recordTypes>
        <fullName>Postsecondary_Workforce_Readiness</fullName>
        <active>false</active>
        <label>Postsecondary &amp; Workforce Readiness</label>
    </recordTypes><recordTypes>
        <fullName>Student_Graduation_and_Completion_Plan</fullName>
        <active>false</active>
        <description>Student Graduation and Completion Plan for Districts</description>
        <label>Student Graduation and Completion Plan</label>
    </recordTypes></CustomObject>